--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": " https://habioye.github.io/Portfolio-Website",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -21,11 +22,14 @@
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "sass": "^1.75.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
